--- a/Calibration_2.0_beta/calibrate_2.0.cfg
+++ b/Calibration_2.0_beta/calibrate_2.0.cfg
@@ -24,7 +24,7 @@ gcode:
    {% set bed_temp = params.BED_TEMP|float %}
    #                                                                  ;space for other params (bed max/min etc.)
    
-   M112                                                               ;this command must be deleted. It protects the printer from starting without starting GCode
+  # M112                                                               ;this command must be deleted. It protects the printer from starting without starting GCode
    START_PRINT EXTRUDER_TEMP={EXTRUDER_TEMP} BED_TEMP={BED_TEMP}      ;replace "START_PRINT" with you START Macro and replace the names of the variables with yours
    
 ##################################
@@ -56,8 +56,8 @@ gcode:
 [gcode_macro PRESSURE_ADVANCE_CALIBRATION]
 description: Calibrate the pressure advance by printing a grid pattern
 gcode:
-    {% set extruder_temp = params.EXTRUDER_TEMP|default(245)|float %}
-    {% set bed_temp = params.BED_TEMP|default(110)|float %}
+    {% set extruder_temp = params.EXTRUDER_TEMP|default(210)|float %}
+    {% set bed_temp = params.BED_TEMP|default(60)|float %}
     {% set pa_start     = params.START|default(0.02)|float %}       # starting PA value
     {% set pa_increment = params.INCREMENT|default(0.005)|float %}  # how much to increment PA per band
 
@@ -67,7 +67,7 @@ gcode:
     {% set num_bands       = params.BANDS_LIMIT|default(999)|int %}               # limit the number of bands to print. othwerwise print as many as would fit within a given size
     {% set lines_per_band  = params.LINES_PER_BAND|default(6)|int %}              # number of lines per band. half are control, another half the test
     {% set e_multiplier    = params.EXTRUSION_MULTIPLIER|default(1.25 if do_raft == 1 else 1.5)|float %},  # extrusion multiplier for line print moves
-    {% set retract_length  = params.RETRACT_LENGTH|default(0.6)|float %}          # how much to retract when traveling between print moves
+    {% set retract_length  = params.RETRACT_LENGTH|default(3)|float %}          # how much to retract when traveling between print moves
     {% set initial_purge   = params.PURGE_MM|default(8)|int %}                    # mm of filament to purge before printing. set to 0 to disable
 
     {% set feedrate_control = params.CONTROL_SPEED|default(30)|int * 60 %}  # print feedrate of the line in the middle of the band
